--- a/static/bower.json
+++ b/static/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "^1.5.7",
     "bootstrap": "~3.3.6",
-    "angular-route": "^1.5.7"
+    "angular-route": "^1.5.7",
+    "angular-sanitize": "~1.5.7"
   }
 }
