--- a/public/bower.json
+++ b/public/bower.json
@@ -19,6 +19,7 @@
     "angular": "^1.5.7",
     "bootstrap": "~3.3.6",
     "angular-route": "^1.5.7",
-    "angular-sanitize": "~1.5.7"
+    "angular-sanitize": "~1.5.7",
+    "font-awesome": "^4.6.3"
   }
 }
