Adding delete key and show key support on frontend and backend

--- a/public/bower.json
+++ b/public/bower.json
@@ -20,6 +20,7 @@
     "bootstrap": "~3.3.6",
     "angular-route": "^1.5.7",
     "angular-sanitize": "~1.5.7",
-    "font-awesome": "^4.6.3"
+    "font-awesome": "^4.6.3",
+    "angular-bootstrap": "^2.0.0"
   }
 }
