Adding auth support to angular routes

--- a/public/bower.json
+++ b/public/bower.json
@@ -21,6 +21,10 @@
     "angular-route": "^1.5.7",
     "angular-sanitize": "~1.5.7",
     "font-awesome": "^4.6.3",
-    "angular-bootstrap": "^2.0.0"
+    "angular-bootstrap": "^2.0.0",
+    "angular-cookies": "^1.5.8"
+  },
+  "resolutions": {
+    "angular": "^1.5.7"
   }
 }
